finished nav bar and started messing around with positions and the like 10/20/2020 ac

--- a/survey.html
+++ b/survey.html
@@ -15,7 +15,17 @@
     <link rel="stylesheet" href="survey.css">
 </head>
 <body>
-    <>
+    <Header>
+        <img src="image/logo.png" alt="placeholder" class="logo">
+        <nav class="navbar">
+            <ul>
+                <li> <a href="index.html" class="menu">Home</a> </li>
+                <li> <a href="Gallery.html" class="menu">Products</a> </li>
+                <li> <a href="Services.html" class="menu">Services</a> </li>
+                <li> <a href="survey.html" class="menu">Sign Up</a> </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
