--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <meta name = "author" content = "Alisson C.">
     <meta name = "description" content = "describe the page">
     
-    <meta property = "og:image" content = "image.png">
-    <meta property = "og:title" content = "insert title">
-    <meta property = "og:description" content = "insert description of linked web">
+    <meta property="og:image" content="image.png">
+    <meta property="og:title" content="insert title">
+    <meta property="og:description" content="insert description of linked web">
     
-    <link rel = "shortcut icon" href = "favicon.png" type = "image/x-icon">
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <Header>
-        <nav class="menu">
+        <img src="image/logo.png" alt="placeholder" class="logo">
+        <nav class="navbar">
             <ul>
                 <li> <a href="index.html" class="menu">Home</a> </li>
                 <li> <a href="Gallery.html" class="menu">Products</a> </li>
@@ -26,7 +27,13 @@
         </nav>
     </header>
 
-    <footer></footer>
+    <img src="image/home-page.png" width="60%" height="40%" alt="pool" class="homepool">
+
+    <p class="review">Good quality products!</p>
+    <p class="review">Fast shipping!</p>
+    <p class="review">Best prices!</p>
+
+    <footer>All rights reserved</footer>
 </body>
 
 </html>
