HTML & Css 10/21/2020 SD

--- a/Gallery.html
+++ b/Gallery.html
@@ -3,10 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="Gallery
+    <title>Gallery</title>
+    <link rel="stylesheet" href="Gallery.css"
 </head>
 <body>
+    <Header>
+
+        <nav class="navbar">
+            <ul>
+                <li> <a href="index.html" class="menu">Home</a> </li>
+                <li> <a href="Gallery.html" class="menu">Products</a> </li>
+                <li> <a href="Services.html" class="menu">Services</a> </li>
+                <li> <a href="survey.html" class="menu">Sign Up</a> </li>
+            </ul>
+        </nav>
+    </header>
+    <h1>Gallery</h1>
     
+
+    <main>
+    
+        <img src="Floats1.jpg" class="Floats1">
+        <img src="Floats2.jpg" class="Floats2">
+        <img src="Floats3.jpg" class="Floats3">
+        <img src="Floats4.jpg" class="Floats4">
+        <img src="Floats5.jpg" class="Floats5">
+        <img src="Floats6.jpg" class="Floats6">
+        <img src="Floats7.jpg" class="Floats7">
+        <img src="Floats8.jpg" class="Floats8">
+        <img src="Floats9.jpg" class="Floats9">
+        <img src="Floats10.jpg" class="Floats10">
+
+    </main>
+
+
 </body>
 </html>
