--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li> <a href="index.html" class="menu">Home</a> </li>
                 <li> <a href="Gallery.html" class="menu">Products</a> </li>
                 <li> <a href="Services.html" class="menu">Services</a> </li>
-                <li> <a href="survey.html" class="menu">Sign Up</a> </li>
+                <li> <a href="sign-up.html" class="menu">Sign Up</a> </li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
     <p class="review">Fast shipping!</p>
     <p class="review">Best prices!</p>
 
-    <footer>All rights reserved</footer>
-</body>
+    <footer>All rights reserved. Background by SVGbackgrounds.comCover photo from Nightingale Art House</footer>
+ </body>
 
 </html>
