--- a/sign-up.html
+++ b/sign-up.html
@@ -12,7 +12,7 @@
     
     <link rel = "shortcut icon" href = "favicon.png" type = "image/x-icon">
 
-    <link rel="stylesheet" href="survey.css">
+    <link rel="stylesheet" href="sign-up.css">
 </head>
 <body>
     <Header>
@@ -22,10 +22,17 @@
                 <li> <a href="index.html" class="menu">Home</a> </li>
                 <li> <a href="Gallery.html" class="menu">Products</a> </li>
                 <li> <a href="Services.html" class="menu">Services</a> </li>
-                <li> <a href="survey.html" class="menu">Sign Up</a> </li>
+                <li> <a href="sign-up.html" class="menu">Sign Up</a> </li>
             </ul>
         </nav>
     </header>
+
+    <fieldset>
+        <label for="name">Name:</label>
+            <input type="text" name="name" id="name">
+        <labe></label>
+            <input type="mail" name="" id="">
+    </fieldset>
 </body>
 
 </html>
