in the middle of doing the login page(10/21/2020 ac)

--- a/Gallery.html
+++ b/Gallery.html
@@ -14,7 +14,7 @@
                 <li> <a href="index.html" class="menu">Home</a> </li>
                 <li> <a href="Gallery.html" class="menu">Products</a> </li>
                 <li> <a href="Services.html" class="menu">Services</a> </li>
-                <li> <a href="survey.html" class="menu">Sign Up</a> </li>
+                <li> <a href="sign-up.html" class="menu">Sign Up</a> </li>
             </ul>
         </nav>
     </header>
@@ -23,16 +23,16 @@
 
     <main>
     
-        <img src="Floats1.jpg" class="Floats1">
-        <img src="Floats2.jpg" class="Floats2">
-        <img src="Floats3.jpg" class="Floats3">
-        <img src="Floats4.jpg" class="Floats4">
-        <img src="Floats5.jpg" class="Floats5">
-        <img src="Floats6.jpg" class="Floats6">
-        <img src="Floats7.jpg" class="Floats7">
-        <img src="Floats8.jpg" class="Floats8">
-        <img src="Floats9.jpg" class="Floats9">
-        <img src="Floats10.jpg" class="Floats10">
+        <img src="image/Floats1.jpg" class="Floats1">
+        <img src="image/Floats2.jpg" class="Floats2">
+        <img src="image/Floats3.jpg" class="Floats3">
+        <img src="image/Floats4.jpg" class="Floats4">
+        <img src="image/Floats5.jpg" class="Floats5">
+        <img src="image/Floats6.jpg" class="Floats6">
+        <img src="image/Floats7.jpg" class="Floats7">
+        <img src="image/Floats8.jpg" class="Floats8">
+        <img src="image/Floats9.jpg" class="Floats9">
+        <img src="image/Floats10.jpg" class="Floats10">
 
     </main>
 
