--- a/Services.html
+++ b/Services.html
@@ -15,7 +15,7 @@
                 <li> <a href="index.html" class="menu">Home</a> </li>
                 <li> <a href="Gallery.html" class="menu">Products</a> </li>
                 <li> <a href="Services.html" class="menu">Services</a> </li>
-                <li> <a href="survey.html" class="menu">Sign Up</a> </li>
+                <li> <a href="sign-up.html" class="menu">Sign Up</a> </li>
             </ul>
         </nav>
     </header>
