--- a/sign-up.html
+++ b/sign-up.html
@@ -28,10 +28,17 @@
     </header>
 
     <fieldset>
-        <label for="name">Name:</label>
-            <input type="text" name="name" id="name">
-        <labe></label>
-            <input type="mail" name="" id="">
+        <legend><strong>Sign Up</strong></legend>
+        <ul>
+            <li>
+                <label for="name">Name:</label>
+                <input type="text" name="name" id="name">
+            </li>
+            <li>
+                <label for="username">Username:</label>
+                <input type="text" name="user.name" id="username">
+            </li>
+        </ul>
     </fieldset>
 </body>
 
