--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <body>
     <Header>
 
+        <img src="image/logo.png" alt="placeholder" class="logo">
+
         <nav class="navbar">
             <ul>
                 <li> <a href="index.html" class="menu">Home</a> </li>
