--- a/Services.html
+++ b/Services.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <Header>
-
+        <img src="image/logo.png" alt="placeholder" class="logo">
         <nav class="navbar">
             <ul>
                 <li> <a href="index.html" class="menu">Home</a> </li>
