--- a/Gallery.html
+++ b/Gallery.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <Header>
-
+        <img src="logo.png" alt="placeholder" class="logo">
         <nav class="navbar">
             <ul>
                 <li> <a href="index.html" class="menu">Home</a> </li>
@@ -21,21 +21,27 @@
     <h1>Gallery</h1>
     
 
-    <main>
+
+   
+
+    <main class="Images">
     
         <img src="image/Floats1.jpg" class="Floats1">
-        <img src="image/Floats2.jpg" class="Floats2">
-        <img src="image/Floats3.jpg" class="Floats3">
-        <img src="image/Floats4.jpg" class="Floats4">
-        <img src="image/Floats5.jpg" class="Floats5">
-        <img src="image/Floats6.jpg" class="Floats6">
-        <img src="image/Floats7.jpg" class="Floats7">
-        <img src="image/Floats8.jpg" class="Floats8">
-        <img src="image/Floats9.jpg" class="Floats9">
-        <img src="image/Floats10.jpg" class="Floats10">
+        <img src="image/Floats2.jpg" class="Floats1">
+        <img src="image/Floats3.jpg" class="Floats1">
+        <img src="image/Floats4.jpg" class="Floats1">
+        <img src="image/Floats5.jpg" class="Floats1">
+        <img src="image/Floats6.jpg" class="Floats1">
+        <img src="image/Floats7.jpg" class="Floats1">
+        <img src="image/Floats8.jpg" class="Floats1">
+        <img src="image/Floats9.jpg" class="Floats1">
+        <img src="image/Floats10.jpg" class="Floats1">
 
     </main>
 
+    <video controls>
+        <source src="RubberDucker.mp4" type="video/mp4"
+    </video>
 
 </body>
 </html>
