--- a/Gallery.html
+++ b/Gallery.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <Header>
-        <img src="logo.png" alt="placeholder" class="logo">
+        <img src="image/logo.png" alt="placeholder" class="logo">
         <nav class="navbar">
             <ul>
                 <li> <a href="index.html" class="menu">Home</a> </li>
