more css touchups (10/22/2020 ac)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p class="review">Fast shipping!</p>
     <p class="review">Best prices!</p>
 
-    <footer>All rights reserved. Background by SVGbackgrounds.comCover photo from Nightingale Art House</footer>
+    <footer>All rights reserved. Background by SVGbackgrounds.com. Cover photo from Nightingale Art House. Logo by Alison C.</footer>
  </body>
 
 </html>
