--- a/sign-up.html
+++ b/sign-up.html
@@ -56,16 +56,18 @@
             Would you like to be sent coupons and notifications via the email you provided?
                 <ul>
                     <label for="yes">Yes</label>
-                    <input type="radio" id="yes" name="wantsEmails" class="question">
+                    <input type="radio" id="yes" name="answer" value="wantsEmails" class="question">
                 </ul>
                 <ul>
                     <label for="no">No</label>
-                    <input type="radio" id="no" name="notWantsEmails" class="question">
+                    <input type="radio" id="no" name="answer" value="notWantsEmails" class="question">
                 </ul>
         </p>
 
         <input type="submit" class="submit">
     </fieldset>
+
+    <footer>All rights reserved. Logo by Alison C.</footer>
 </body>
 
 </html>
