--- a/Gallery.html
+++ b/Gallery.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
     </header>
-    <h1>Gallery</h1>
+    <h1>Products</h1>
     
 
 
@@ -39,9 +39,10 @@
 
     </main>
 
-    <video controls>
-        <source src="RubberDucker.mp4" type="video/mp4" 
+    <video>
+        <source src="RubberDucker.mp4" type="video/mp4" class="video">
     </video>
 
+    <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alison C.</footer>
 </body>
 </html>
