--- a/Services.html
+++ b/Services.html
@@ -35,6 +35,6 @@
     <p><i>⚪Don't waste your time buying any cheap overpriced floates anywhere else but Surfs Up. -Allen Mckenna</i></p>
     <p><i>⚫My floaties lasted me 3 summers and its still in tip top mint condition.-Ashley Allerd</i></p>
   
-
+    <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alison C.</footer>
 </body>
 </html>
