changed 1 word from services.html(10/22/2020 ac)

--- a/Services.html
+++ b/Services.html
@@ -23,7 +23,7 @@
     <h1>Services</h1>
     
   
-    <P><b>We offer the highest quality and the best pool products on the market.</b></P>
+    <P><b>We offer the highest quality and the best beach products on the market.</b></P>
 
     <p><b>Our prices range anywhere from $25 to $95.</b></p>
 
