--- a/sign-up.html
+++ b/sign-up.html
@@ -35,12 +35,12 @@
                 <input type="text" name="name" id="name">
             </li>
             <li>
-                <label for="username">Username:</label>
-                <input type="text" name="user.name" id="username">
-            </li>
-            <li>
                 <label for="mail">Email:</label>
                 <input type="text" name="email" id="email">
+            </li>
+            <li>
+                <label for="username">Username:</label>
+                <input type="text" name="user.name" id="username">
             </li>
             <li>
                 <label for="password">Password:</label>
@@ -63,8 +63,10 @@
                     <input type="radio" id="no" name="answer" value="notWantsEmails" class="question">
                 </ul>
         </p>
-
-        <input type="submit" class="submit">
+        
+        <form action="index.html">
+        <input type="submit" value="submit" class="submit">
+        </form>
     </fieldset>
 
     <footer>All rights reserved. Logo by Alison C.</footer>
