touchups on footers(10/22/2020 ac)

--- a/sign-up.html
+++ b/sign-up.html
@@ -69,7 +69,7 @@
         </form>
     </fieldset>
 
-    <footer>All rights reserved. Logo by Alison C.</footer>
+    <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alison C.</footer>
 </body>
 
 </html>
