--- a/Gallery.html
+++ b/Gallery.html
@@ -42,7 +42,7 @@
     <br>
 
     <video controls>
-        <source src="RubberDucker.mp4" type="video/mp4" 
+        <source src="RubberDucker.mp4" type="video/mp4">
     </video>
 
     <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alison C.</footer>
