fixed favicons and page names(10/22/2020 AC)

--- a/Gallery.html
+++ b/Gallery.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
-    <link rel="stylesheet" href="Gallery.css"
+    <title>Products</title>
+    <link rel="stylesheet" href="Gallery.css">
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
 </head>
 <body>
     <Header>
