--- a/sign-up.html
+++ b/sign-up.html
@@ -10,7 +10,7 @@
     <meta property = "og:title" content = "insert title">
     <meta property = "og:description" content = "insert description of linked web">
     
-    <link rel = "shortcut icon" href = "favicon.png" type = "image/x-icon">
+    <link rel = "shortcut icon" href = "image/favicon.png" type = "image/x-icon">
 
     <link rel="stylesheet" href="sign-up.css">
 </head>
