--- a/Services.html
+++ b/Services.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name = "author" content = "Sam Dobos">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="Serves.css"
+    <title>Services</title>
+    <link rel="stylesheet" href="Serves.css">
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
 </head>
 <body>
     <Header>
