--- a/Services.html
+++ b/Services.html
@@ -18,6 +18,7 @@
                 <li> <a href="Services.html" class="menu">Services</a> </li>
                 <li> <a href="sign-up.html" class="menu">Sign Up</a> </li>
             </ul>
+            <input type="text" placeholder="Search">
         </nav>
     </header>
     
