--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li> <a href="Services.html" class="menu">Services</a> </li>
                 <li> <a href="sign-up.html" class="menu">Sign Up</a> </li>
             </ul>
+            <input type="text" placeholder="Search" class="Search">
         </nav>
     </header>
 
