--- a/Gallery.html
+++ b/Gallery.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="Gallery.css"
 </head>
 <body>
+
+    <div style="width: 60%; height: 200px;"></div>
+
     <Header>
         <img src="image/logo.png" alt="placeholder" class="logo">
         <nav class="navbar">
@@ -23,7 +26,7 @@
 
 
    
-
+   
     <main class="Images">
     
         <img src="image/Floats1.jpg" class="Floats1">
@@ -38,6 +41,7 @@
         <img src="image/Floats10.jpg" class="Floats1">
 
     </main>
+   
 
     <br>
 
