finished adding the search bar and fixed the logo(10/23/2020 AC)

--- a/Gallery.html
+++ b/Gallery.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <Header>
-        <img src="image/logo.png" alt="placeholder" class="logo">
         <nav class="navbar">
             <ul>
                 <li> <a href="index.html" class="menu">Home</a> </li>
@@ -17,6 +16,7 @@
                 <li> <a href="Services.html" class="menu">Services</a> </li>
                 <li> <a href="sign-up.html" class="menu">Sign Up</a> </li>
             </ul>
+            <input type="text" placeholder="Search" class="Search">
         </nav>
     </header>
     <h1>Products</h1>
@@ -43,9 +43,9 @@
     <br>
 
     <video controls>
-        <source src="RubberDucker.mp4" type="video/mp4">
+        <source src="image/RubberDucker.mp4" type="video/mp4">
     </video>
 
-    <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alison C.</footer>
+    <footer>All rights reserved. Background by SVGbackgrounds.com.</footer>
 </body>
 </html>
