--- a/Services.html
+++ b/Services.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <Header>
-        <img src="image/logo.png" alt="placeholder" class="logo">
         <nav class="navbar">
             <ul>
                 <li> <a href="index.html" class="menu">Home</a> </li>
@@ -18,7 +17,7 @@
                 <li> <a href="Services.html" class="menu">Services</a> </li>
                 <li> <a href="sign-up.html" class="menu">Sign Up</a> </li>
             </ul>
-            <input type="text" placeholder="Search">
+            <input type="text" placeholder="Search" class="Search">
         </nav>
     </header>
     
@@ -41,7 +40,7 @@
         <br>
     <i>⚫My floaties lasted me 3 summers and its still in tip top mint condition.-Ashley Allerd</i>
 
-    <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alison C.</footer>
+    <footer>All rights reserved. Background by SVGbackgrounds.com.</footer>
 </p>
 
 
