--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
 </head>
 <body>
     <Header>
-
-        <img src="image/logo.png" alt="placeholder" class="logo">
-
         <nav class="navbar">
             <ul>
                 <li> <a href="index.html" class="menu">Home</a> </li>
@@ -30,13 +27,15 @@
         </nav>
     </header>
 
-    <img src="image/home-page.png" width="60%" height="40%" alt="pool" class="homepool">
+    <img src="image/logo.png" alt="yellow surfboard reading 'surf's up' in navy letters" class="logo">
+
+    <!--<img src="image/home-page.png" width="60%" height="40%" alt="pool" class="homepool">-->
 
     <p class="review">Good quality products!</p>
     <p class="review">Fast shipping!</p>
     <p class="review">Best prices!</p>
 
-    <footer>All rights reserved. Background by SVGbackgrounds.com. Photo by Daniel Jurin from Pexels. Logo by Alison C.</footer>
+    <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alison C.</footer>
  </body>
 
 </html>
