--- a/sign-up.html
+++ b/sign-up.html
@@ -16,7 +16,6 @@
 </head>
 <body>
     <Header>
-        <img src="image/logo.png" alt="placeholder" class="logo">
         <nav class="navbar">
             <ul>
                 <li> <a href="index.html" class="menu">Home</a> </li>
@@ -24,10 +23,11 @@
                 <li> <a href="Services.html" class="menu">Services</a> </li>
                 <li> <a href="sign-up.html" class="menu">Sign Up</a> </li>
             </ul>
+            <input type="text" placeholder="Search" class="Search">
         </nav>
     </header>
 
-    <fieldset>
+    <fieldset class="form">
         <legend><strong>Sign Up</strong></legend>
         <ul>
             <li>
@@ -64,12 +64,14 @@
                 </ul>
         </p>
         
+        <img src="image/logo.png" alt="yellow surfboard reading 'surf's up' in navy letters" class="logo">
+        
         <form action="index.html">
         <input type="submit" value="submit" class="submit">
         </form>
     </fieldset>
 
-    <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alison C.</footer>
+    <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alisson C.</footer>
 </body>
 
 </html>
