--- a/Services.html
+++ b/Services.html
@@ -24,21 +24,15 @@
     <h1>Services</h1>
     
     
-    <P><b>We offer the highest quality and the best beach products on the market.</b>
-<br>
-<br>
-    <b>Our prices range anywhere from $25 to $95.</b>
+    <P><b>We offer the highest quality and the best beach and pool floats on the market. Our floats are American
+        made and are extremely high in durability and last up
+        to 5 years guarenteed. </b>
+
+    <b>Our prices range anywhere from $25 to $95 and our company ships worldwide, So go ahead and treat yourself and buy some floats today.</b>
 
 
     <br>
 
-    <h2>Testimonials</h2>
-
-    <p><i>⚫These are the best floats for your money you'll ever buy. -Jeremy Tayler</i>
-        <br>
-    <i>⚪Don't waste your time buying any cheap overpriced floates anywhere else but Surfs Up. -Allen Mckenna</i>
-        <br>
-    <i>⚫My floaties lasted me 3 summers and its still in tip top mint condition.-Ashley Allerd</i>
 
     <footer>All rights reserved. Background by SVGbackgrounds.com.</footer>
 </p>
