fixed testimonials and the weird thing going on with gallery.html's nvbar(10/26/2020 AC)

--- a/index.html
+++ b/index.html
@@ -31,9 +31,24 @@
 
     <!--<img src="image/home-page.png" width="60%" height="40%" alt="pool" class="homepool">-->
 
-    <p class="review">Good quality products!</p>
-    <p class="review">Fast shipping!</p>
-    <p class="review">Best prices!</p>
+    <pre>
+        These are the best 
+        floats for your money 
+        you'll ever buy.
+        -Jeremy Tayler
+    </pre>
+    <pre>
+        Don't waste your time buying any 
+        cheap overpriced floates anywhere
+        else but Surfs Up. 
+        -Allen Mckenna
+    </pre>
+    <pre>
+        My floaties lasted me 3 
+        summers and its still in 
+        tip top mint condition.
+        -Ashley Allerd
+    </pre>
 
     <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alison C.</footer>
  </body>
