added phone number to footer(10/26/2020 AC)

--- a/Gallery.html
+++ b/Gallery.html
@@ -50,6 +50,6 @@
         <source src="image/RubberDucker.mp4" type="video/mp4">
     </video>
 
-    <footer>All rights reserved. Background by SVGbackgrounds.com.</footer>
+    <footer>All rights reserved. Background by SVGbackgrounds.com. Call 623-XXX-XXX for more information</footer>
 </body>
 </html>
