--- a/Services.html
+++ b/Services.html
@@ -34,7 +34,7 @@
     <br>
 
 </p>
-    <footer>All rights reserved. Background by SVGbackgrounds.com.</footer>
+    <footer>All rights reserved. Background by SVGbackgrounds.com. Call 623-XXX-XXX for more information.</footer>
 
 
 
