--- a/sign-up.html
+++ b/sign-up.html
@@ -71,7 +71,7 @@
         </form>
     </fieldset>
 
-    <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alisson C.</footer>
+    <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alisson C. Call 623-XXX-XXX for more information.</footer>
 </body>
 
 </html>
