changed icon(10/26/2020 AC)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         -Ashley Allerd
     </pre>
 
-    <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alison C.</footer>
+    <footer>All rights reserved. Background by SVGbackgrounds.com. Logo by Alison C. Call 623-XXX-XXX for more information.</footer>
  </body>
 
 </html>
